# switchman

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  test-output.txt
.cursor/: mcp.json
.github/workflows/: ci.yml
.switchman/: audit.key
desktop/: README.md  index.html  package-lock.json  package.json  styles.css
desktop/docs/: cli-wrapper-contract.md  flag-copy-review.md  phase-1-product-guardrails.md
desktop/src/: app.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  switchman.rs
desktop/tests/: cli.test.mjs
docs/: command-reference.md  mcp-tools.md  merge-queue.md  pipelines.md  setup-claude-code.md  setup-cli-agents.md  setup-cursor.md  setup-windsurf.md  stale-lease-policy.md  status-and-recovery.md  telemetry.md
docs/architecture/: DESIGN_SUMMARY.md  ENFORCEMENT_LAYER.md
examples/: README.md  demo.sh  setup.sh  teardown.sh  walkthrough.sh
src/cli/: index.js  planning.js  repair.js  reports.js  setup.js  ui.js
src/core/: board-app.js  board-discovery.js  board-registry.js  board-roots.js  ci.js  db.js  detector.js  enforcement.js  git.js  homebrew.js  ignore.js  licence.js  license.js  mcp.js  merge-gate.js  monitor.js  notifications.js  outcome.js  pipeline.js  planner.js  policy.js  queue.js  scheduler.js  semantic.js  share.js  shared-coordination.js  sync.js  telemetry.js
src/guard/: anomaly.js  audit.js  events.js  index.js  scope.js
tests/: board-discovery.test.js  board-registry.test.js  test.js
(+20 files in other folders)
