[package]
name = "switchman-desktop"
version = "0.1.0"
description = "Switchman desktop app"
authors = ["Switchman"]
edition = "2021"

[lib]
name = "switchman_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
